apps/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/component: monitoring
    pod-security.kubernetes.io/enforce: privileged
