apps/jellyfin/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webserver
    spec:
      containers:
        - name: webserver
          image: jellyfin/jellyfin:10.11.9
          ports:
            - containerPort: 8096
            - containerPort: 1900
              protocol: UDP
          resources:
            requests:
              gpu.intel.com/i915: 1
            limits:
              gpu.intel.com/i915: 1
          volumeMounts:
            - mountPath: /config
              name: jellyfin-folder
              subPath: config
            - mountPath: /cache
              name: jellyfin-folder
              subPath: cache
            - mountPath: /audiobooks
              name: audiobooks
            - mountPath: /fotos
              name: fotos
            - mountPath: /music
              name: music
            - mountPath: /videos
              name: videos
            - name: dri-device
              mountPath: /dev/dri
      restartPolicy: Always
      volumes:
        - name: jellyfin-folder
          persistentVolumeClaim:
            claimName: jellyfin-data
        - name: audiobooks
          nfs:
            server: 192.168.2.146
            path: /mnt/Personal/Audiobooks
        - name: fotos
          nfs:
            server: 192.168.2.146
            path: /mnt/Personal/Fotos
        - name: music
          nfs:
            server: 192.168.2.146
            path: /mnt/Personal/Musik
        - name: videos
          nfs:
            server: 192.168.2.146
            path: /mnt/Personal/Videos
        - name: dri-device
          hostPath:
            path: /dev/dri
